Fixing the hamburger menu, which was overlapping with the Program Title on mobile.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -3034,6 +3034,9 @@ input[type="button"].btn-block {
 .dropdown {
   position: relative;
 }
+.dropdown, .navbar-right a {
+  background: #2C2C2B;
+}
 .dropdown-toggle:focus {
   outline: 0;
 }
@@ -3173,6 +3176,7 @@ input[type="button"].btn-block {
     right: auto;
   }
 }
+
 .btn-group,
 .btn-group-vertical {
   position: relative;
